--- a/charts/dp-configure-namespace/charts/haproxy/templates/controller-serviceaccount.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/templates/controller-serviceaccount.yaml
@@ -14,21 +14,15 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
-{{- if and .Values.rbac.create .Values.podSecurityPolicy.enabled -}}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+{{- if or .Values.serviceAccount.create -}}
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  name: {{ include "kubernetes-ingress.fullname" . }}
+  name: {{ include "kubernetes-ingress.serviceAccountName" . }}
   namespace: {{ include "kubernetes-ingress.namespace" . }}
   labels:
     {{- include "kubernetes-ingress.labels" . | nindent 4 }}
-rules:
-- apiGroups: 
-  - "policy"
-  resources:
-  - podsecuritypolicies
-  verbs:
-  - use
-  resourceNames:
-  - {{ include "kubernetes-ingress.fullname" . }}
+{{- if hasKey .Values.serviceAccount "automountServiceAccountToken" }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+{{- end }}
 {{- end -}}
