--- a/charts/o11y-service/templates/secret-cleanup-hook.yaml
+++ b/charts/o11y-service/templates/secret-cleanup-hook.yaml
@@ -39,38 +39,7 @@ spec:
           
           SECRET_NAME="{{ include "o11y-service.fullname" . }}"
           NAMESPACE="{{ .Release.Namespace }}"
-          
-          {{- $hasHeaders := false }}
-          {{- if .Values.global.cp.resources.o11yv3.metricsServer.secret.proxy.prometheus.headers }}
-            {{- if gt (len .Values.global.cp.resources.o11yv3.metricsServer.secret.proxy.prometheus.headers) 0 }}
-              {{- $hasHeaders = true }}
-            {{- end }}
-          {{- end }}
-          {{- if .Values.global.cp.resources.o11yv3.metricsServer.secret.exporter.prometheus.headers }}
-            {{- if gt (len .Values.global.cp.resources.o11yv3.metricsServer.secret.exporter.prometheus.headers) 0 }}
-              {{- $hasHeaders = true }}
-            {{- end }}
-          {{- end }}
-          {{- if .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.headers }}
-            {{- if gt (len .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.userApps.elasticSearch.headers) 0 }}
-              {{- $hasHeaders = true }}
-            {{- end }}
-          {{- end }}
-          {{- if .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.services.elasticSearch.headers }}
-            {{- if gt (len .Values.global.cp.resources.o11yv3.logsServer.secret.exporter.services.elasticSearch.headers) 0 }}
-              {{- $hasHeaders = true }}
-            {{- end }}
-          {{- end }}
-          {{- if .Values.global.cp.resources.o11yv3.tracesServer.secret.exporter.elasticSearch.headers }}
-            {{- if gt (len .Values.global.cp.resources.o11yv3.tracesServer.secret.exporter.elasticSearch.headers) 0 }}
-              {{- $hasHeaders = true }}
-            {{- end }}
-          {{- end }}
-          {{- if not $hasHeaders }}
-          echo "No headers defined in values. Skipping cleanup."
-          exit 0
-          {{- end }}
-          
+
           echo "Checking if secret $SECRET_NAME exists in namespace $NAMESPACE..."
           
           if ! kubectl get secret "$SECRET_NAME" -n "$NAMESPACE" &>/dev/null; then
@@ -91,6 +60,7 @@ spec:
             "headers-metrics-proxy-"
             "headers_metrics_exporter_"
             "headers-logs-proxy-userapp-"
+            "headers-logs-proxy-services-"
             "headers-logs-proxy-auditsafe-"
             "headers_logs_expo_userapp_"
             "headers_logs_expo_services_"
