--- a/charts/dp-configure-namespace/charts/haproxy/ci/deployment-customconfig-templated-values.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/ci/deployment-customconfig-templated-values.yaml
@@ -5,6 +5,7 @@
 #
 
 controller:
-  kind: DaemonSet
-  unprivileged: true
-  allowPrivilegedPorts: true
+  config: |
+    rate-limit: "{{ .Values.controller.configVars.rateLimit | required "controller.configVars.rateLimit is required" }}"
+  configVars:
+    rateLimit: "ON"
