--- a/charts/dp-configure-namespace/charts/haproxy/ci/deployment-podannotations-templated-values.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/ci/deployment-podannotations-templated-values.yaml
@@ -5,6 +5,7 @@
 #
 
 controller:
-  kind: DaemonSet
-  unprivileged: true
-  allowPrivilegedPorts: true
+  podAnnotations: |
+      my-checksum: {{ $.Values.myCustomVar | toYaml | sha256sum }}
+myCustomVar:
+  FOO: BAR
