--- a/charts/dp-configure-namespace/charts/haproxy/templates/controller-crdjob.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/templates/controller-crdjob.yaml
@@ -15,103 +15,100 @@ limitations under the License.
 */}}
 
 {{/*
-# apiVersion: batch/v1
-# kind: Job
-# metadata:
-#   name: {{ include "kubernetes-ingress.crdjob.fullname" . }}
-#   namespace: {{ include "kubernetes-ingress.namespace" . }}
-#   labels:
-#     app.kubernetes.io/name: {{ include "kubernetes-ingress.crdjob.fullname" . }}
-#     helm.sh/chart: {{ include "kubernetes-ingress.chart" . }}
-#     app.kubernetes.io/managed-by: {{ .Release.Service }}
-#     app.kubernetes.io/instance: {{ .Release.Name }}
-#     app.kubernetes.io/version: {{ .Chart.AppVersion }}
-#   annotations:
-#     argocd.argoproj.io/hook: Sync
-#     argocd.argoproj.io/hook-delete-policy: HookSucceeded
-# spec:
-# {{- if or (.Capabilities.APIVersions.Has "batch/v1alpha1") (semverCompare ">=1.23.0-0" .Capabilities.KubeVersion.Version) }}
-# {{- if .Values.crdjob.ttlSecondsAfterFinished }}
-#   ttlSecondsAfterFinished: {{ .Values.crdjob.ttlSecondsAfterFinished }}
-# {{- end }}
-# {{- end }}
-#   backoffLimit: 0
-#   template:
-#     metadata:
-#       labels:
-#         app.kubernetes.io/name: {{ include "kubernetes-ingress.crdjob.fullname" . }}
-#         app.kubernetes.io/instance: {{ .Release.Name }}
-#         {{- if .Values.controller.podLabels }}
-# {{ toYaml .Values.controller.podLabels | indent 8 }}
-#         {{- end }}
-#       {{- $podAnnotations := dict }}
-#       {{- if .Values.crdjob.podAnnotations }}
-#         {{- $podAnnotations = merge $podAnnotations .Values.crdjob.podAnnotations }}
-#       {{- end }}
-#       {{- if .Values.controller.podAnnotations }}
-#         {{- $podAnnotations = merge $podAnnotations .Values.controller.podAnnotations }}
-#       {{- end }}
-#       {{- if not (empty $podAnnotations) }}
-#       annotations:
-# {{ toYaml $podAnnotations | indent 8 }}
-#       {{- end }}
-#     spec:
-#       restartPolicy: Never
-#       serviceAccountName: {{ include "kubernetes-ingress.serviceAccountName" . }}
-# {{- if .Values.controller.imageCredentials.registry }}
-#       imagePullSecrets:
-#       - name: {{ include "kubernetes-ingress.fullname" . }}
-# {{- else if .Values.controller.existingImagePullSecret }}
-#       imagePullSecrets:
-#       - name: {{ .Values.controller.existingImagePullSecret }}
-# {{- end }}
-# {{- if .Values.controller.priorityClassName }}
-#       priorityClassName: {{ .Values.controller.priorityClassName }}
-# {{- end }}
-# {{- if .Values.controller.runtimeClassName }}
-#       runtimeClassName: {{ .Values.controller.runtimeClassName }}
-# {{- end }}
-# {{- if .Values.controller.unprivileged }}
-#       securityContext:
-#         runAsNonRoot: true
-#         runAsUser:  1000
-#         runAsGroup: 1000
-# {{- end }}
-#       containers:
-#         - name: crd
-#           image: "{{ .Values.controller.image.repository }}:{{ tpl .Values.controller.image.tag . }}"
-#           imagePullPolicy: {{ .Values.controller.image.pullPolicy }}
-#           command:
-#             - /haproxy-ingress-controller
-#             - --job-check-crd
-#           {{- if .Values.controller.unprivileged }}
-#           securityContext:
-#             runAsNonRoot: true
-#             runAsUser:  1000
-#             runAsGroup: 1000
-#             allowPrivilegeEscalation: {{ .Values.controller.allowPrivilegeEscalation }}
-#             capabilities:
-#               drop:
-#                 - ALL
-#               add:
-#                 - NET_BIND_SERVICE
-#             {{- if .Values.controller.enableRuntimeDefaultSeccompProfile }}
-#             seccompProfile:
-#               type: RuntimeDefault
-#             {{- end }}
-#           resources:
-#             {{- toYaml .Values.controller.resources | nindent 12 }}
-#           {{- end }}
-#       {{- with .Values.controller.nodeSelector }}
-#       nodeSelector:
-#         {{- toYaml . | nindent 8 }}
-#       {{- end }}
-#       {{- with .Values.controller.affinity }}
-#       affinity:
-#         {{- toYaml . | nindent 8 }}
-#       {{- end }}
-#       {{- with .Values.controller.tolerations }}
-#       tolerations:
-#         {{- toYaml . | nindent 8 }}
-#       {{- end }}
+#apiVersion: batch/v1
+#kind: Job
+#metadata:
+#  name: {{ include "kubernetes-ingress.crdjob.fullname" . }}
+#  namespace: {{ include "kubernetes-ingress.namespace" . }}
+#  labels:
+#    {{- include "kubernetes-ingress.crdJobLabels" . | nindent 4 }}
+#  annotations:
+#    argocd.argoproj.io/hook: Sync
+#    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+#    helm.sh/hook: post-install,pre-upgrade
+#    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
+#  {{- with .Values.controller.annotations }}
+#    {{- toYaml . | nindent 4 }}
+#  {{- end }}
+#spec:
+#{{- if or (.Capabilities.APIVersions.Has "batch/v1alpha1") (semverCompare ">=1.23.0-0" .Capabilities.KubeVersion.Version) }}
+#{{- if .Values.crdjob.ttlSecondsAfterFinished }}
+#  ttlSecondsAfterFinished: {{ .Values.crdjob.ttlSecondsAfterFinished }}
+#{{- end }}
+#{{- end }}
+#  backoffLimit: 0
+#  template:
+#    metadata:
+#      labels:
+#        {{- include "kubernetes-ingress.crdJobSelectorLabels" . | nindent 8 }}
+#        {{- if .Values.controller.podLabels }}
+#{{ toYaml .Values.controller.podLabels | indent 8 }}
+#        {{- end }}
+#      {{- if .Values.crdjob.podAnnotations }}
+#      annotations:
+#{{- if eq "string" (printf "%T" .Values.crdjob.podAnnotations) }}
+#{{ tpl .Values.crdjob.podAnnotations . | indent 8 }}
+#{{- else }}
+#{{ toYaml .Values.crdjob.podAnnotations | indent 8 }}
+#{{- end }}
+#      {{- end }}
+#    spec:
+#      restartPolicy: Never
+#      serviceAccountName: {{ include "kubernetes-ingress.serviceAccountName" . }}
+#{{- if .Values.controller.imageCredentials.registry }}
+#      imagePullSecrets:
+#      - name: {{ include "kubernetes-ingress.fullname" . }}
+#{{- else if .Values.controller.existingImagePullSecret }}
+#      imagePullSecrets:
+#      - name: {{ .Values.controller.existingImagePullSecret }}
+#{{- end }}
+#{{- if .Values.controller.priorityClassName }}
+#      priorityClassName: {{ .Values.controller.priorityClassName }}
+#{{- end }}
+#{{- if .Values.controller.runtimeClassName }}
+#      runtimeClassName: {{ .Values.controller.runtimeClassName }}
+#{{- end }}
+#{{- if .Values.controller.unprivileged }}
+#      securityContext:
+#        runAsNonRoot: true
+#        runAsUser:  1000
+#        runAsGroup: 1000
+#{{- end }}
+#      containers:
+#        - name: crd
+#          image: "{{ .Values.controller.image.repository }}:{{ .Values.controller.image.tag | default .Chart.AppVersion }}"
+#          imagePullPolicy: {{ .Values.controller.image.pullPolicy }}
+#          command:
+#            - /haproxy-ingress-controller
+#            - --job-check-crd
+#          {{- if .Values.controller.unprivileged }}
+#          securityContext:
+#            runAsNonRoot: true
+#            runAsUser:  1000
+#            runAsGroup: 1000
+#            allowPrivilegeEscalation: {{ .Values.controller.allowPrivilegeEscalation }}
+#            capabilities:
+#              drop:
+#                - ALL
+#              add:
+#                - NET_BIND_SERVICE
+#            {{- if .Values.controller.enableRuntimeDefaultSeccompProfile }}
+#            seccompProfile:
+#              type: RuntimeDefault
+#            {{- end }}
+#          resources:
+#            {{- toYaml .Values.controller.resources | nindent 12 }}
+#          {{- end }}
+#      {{- with .Values.controller.nodeSelector }}
+#      nodeSelector:
+#        {{- toYaml . | nindent 8 }}
+#      {{- end }}
+#      {{- with .Values.controller.affinity }}
+#      affinity:
+#        {{- toYaml . | nindent 8 }}
+#      {{- end }}
+#      {{- with .Values.controller.tolerations }}
+#      tolerations:
+#        {{- toYaml . | nindent 8 }}
+#      {{- end }}
 */}}
