--- a/charts/dp-configure-namespace/charts/haproxy/templates/controller-daemonset.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/templates/controller-daemonset.yaml
@@ -24,12 +24,12 @@ kind: DaemonSet
 metadata:
   name: {{ include "kubernetes-ingress.fullname" . }}
   namespace: {{ include "kubernetes-ingress.namespace" . }}
+  {{- with .Values.controller.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
-    app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-    helm.sh/chart: {{ include "kubernetes-ingress.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    {{- include "kubernetes-ingress.labels" . | nindent 4 }}
     {{- if .Values.controller.extraLabels }}
 {{ toYaml .Values.controller.extraLabels | indent 4 }}
     {{- end }}
@@ -41,13 +41,11 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "kubernetes-ingress.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- include "kubernetes-ingress.selectorLabels" . | nindent 8 }}
         {{- if .Values.controller.podLabels }}
 {{ toYaml .Values.controller.podLabels | indent 8 }}
         {{- end }}
@@ -126,8 +124,9 @@ spec:
 {{- if .Values.controller.logging.level }}
           - --log={{ .Values.controller.logging.level }}
 {{- end }}
-{{- if .Values.controller.service.enablePorts.prometheus }}
+{{- if .Values.controller.service.enablePorts.admin }}
           - --prometheus
+          - --pprof
 {{- end }}
 {{- range .Values.controller.extraArgs }}
           - {{ . }}
@@ -153,8 +152,8 @@ spec:
             - name: {{ $key }}
               containerPort: {{ $value }}
               protocol: TCP
-              {{- if $useHostPort }}
-              hostPort: {{ index $hostPorts $key | default $value }}
+              {{- if and $useHostPort (index $hostPorts $key) }}
+              hostPort: {{ index $hostPorts $key }}
               {{- end }}
               {{- if $hostIP }}
               hostIP: {{ $hostIP }}
@@ -277,9 +276,13 @@ spec:
         {{- else if gt (len .Values.controller.extraVolumes) 0 }}
 {{ toYaml .Values.controller.extraVolumes | indent 8 }}
         {{- end }}
-      {{- with.Values.controller.initContainers }}
+      {{- if .Values.controller.initContainers }}
       initContainers:
-          {{- toYaml . | nindent 8 }}
+        {{- if eq "string" (printf "%T" .Values.controller.initContainers) }}
+{{ tpl .Values.controller.initContainers . | indent 8 }}
+        {{- else }}
+{{ toYaml .Values.controller.initContainers | indent 8 }}
+        {{- end }}
       {{- end }}
       {{- with .Values.controller.nodeSelector }}
       nodeSelector:
