--- a/charts/dp-configure-namespace/charts/haproxy/templates/controller-keda.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/templates/controller-keda.yaml
@@ -21,11 +21,7 @@ metadata:
   name: {{ include "kubernetes-ingress.fullname" . }}
   namespace: {{ include "kubernetes-ingress.namespace" . }}
   labels:
-    app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-    helm.sh/chart: {{ include "kubernetes-ingress.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    {{- include "kubernetes-ingress.labels" . | nindent 4 }}
   {{- if .Values.controller.keda.scaledObject.annotations }}
   annotations: {{ toYaml .Values.controller.keda.scaledObject.annotations | nindent 4 }}
   {{- end }}
@@ -40,6 +36,10 @@ spec:
 {{- with .Values.controller.keda.triggers }}
 {{ toYaml . | indent 2 }}
 {{ end }}
+{{- with .Values.controller.keda.fallback }}
+  fallback:
+{{ toYaml . | indent 4 }}
+{{- end }}
   advanced:
     restoreToOriginalReplicaCount: {{ .Values.controller.keda.restoreToOriginalReplicaCount }}
 {{- if .Values.controller.keda.horizontalPodAutoscalerConfig }}
