--- a/charts/dp-configure-namespace/charts/haproxy/templates/controller-service-metrics.yaml
+++ b/charts/dp-configure-namespace/charts/haproxy/templates/controller-service-metrics.yaml
@@ -18,8 +18,6 @@ limitations under the License.
 The following Service resource will be created upon certain conditions:
 - The ServiceMonitor integration is enabled
 - A Service resource must be created
-- The stats port is not exposed
-- The Service is type LoadBalancer
 
 The reason for that is that the Ingress Controller would make it available to the outside
 sensitive data such as its metrics, and the operator wants to keep these data private
@@ -28,18 +26,14 @@ sensitive data such as its metrics, and the operator wants to keep these data pr
 To let the Prometheus Operator being able to scrape the metrics, an additional service
 is going to be created, allowing it to expose of these in the internal Kubernetes networking.
 */}}
-{{- if and (.Values.controller.serviceMonitor.enabled) (.Values.controller.service.enabled) (not .Values.controller.service.enablePorts.stat) (eq .Values.controller.service.type "LoadBalancer") }}
+{{- if and (.Values.controller.serviceMonitor.enabled) (.Values.controller.service.enabled) }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "kubernetes-ingress.serviceMetricsName" . }}
   namespace: {{ include "kubernetes-ingress.namespace" . }}
   labels:
-    app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-    helm.sh/chart: {{ include "kubernetes-ingress.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    {{- include "kubernetes-ingress.labels" . | nindent 4 }}
 {{- if .Values.controller.service.metrics.labels }}
 {{ toYaml .Values.controller.service.metrics.labels | indent 4 }}
 {{- end }}
@@ -58,6 +52,5 @@ spec:
       nodePort: {{ .Values.controller.service.nodePorts.stat }}
     {{- end }}
   selector:
-    app.kubernetes.io/name: {{ include "kubernetes-ingress.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "kubernetes-ingress.selectorLabels" . | nindent 4 }}
 {{- end }}
