--- a/charts/o11y-service/templates/ingress-baremetal.yaml
+++ b/charts/o11y-service/templates/ingress-baremetal.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -10,6 +10,19 @@
   {{- if not (hasKey .Values.global.cp.dataplane.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.global.cp.dataplane.ingress.annotations "kubernetes.io/ingress.class" .Values.global.cp.dataplane.ingress.className}}
   {{- end }}
+{{- end }}
+{{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-logs-rewrite
+  namespace: {{ .Values.global.cp.resources.serviceaccount.namespace | default .Release.Namespace }}
+spec:
+  # Static rewrite to /v1/logs (equivalent to nginx rewrite-target: /v1/logs)
+  replacePathRegex:
+    replacement: /v1/logs
+    regex: ^/tibco/agent/o11y/{{ $.Values.global.cp.dataplaneId }}/logs
+---
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
@@ -27,9 +40,15 @@ metadata:
   annotations:
     meta.helm.sh/release-namespace: {{ .Values.global.cp.resources.serviceaccount.namespace }}
     meta.helm.sh/release-name: {{ $fullName }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "nginx" }}
     nginx.ingress.kubernetes.io/rewrite-target: /v1/logs
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    {{- end }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Values.global.cp.resources.serviceaccount.namespace }}-bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-logs-rewrite@kubernetescrd
+    {{- end }}
 spec:
   {{- if and .Values.global.cp.dataplane.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.global.cp.resources.ingress.ingressClassName }}
@@ -69,6 +88,19 @@ spec:
   {{- $_ := set .Values.global.cp.dataplane.ingress.annotations "kubernetes.io/ingress.class" .Values.global.cp.dataplane.ingress.className}}
   {{- end }}
 {{- end }}
+{{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-traces-rewrite
+  namespace: {{ .Values.global.cp.resources.serviceaccount.namespace | default .Release.Namespace }}
+spec:
+  # Static rewrite to /v1/traces (equivalent to nginx rewrite-target: /v1/traces)
+  replacePathRegex:
+    replacement: /v1/traces
+    regex: ^/tibco/agent/o11y/{{ $.Values.global.cp.dataplaneId }}/traces
+---
+{{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -85,9 +117,15 @@ metadata:
   annotations:
     meta.helm.sh/release-namespace: {{ .Values.global.cp.resources.serviceaccount.namespace }}
     meta.helm.sh/release-name: {{ $fullName }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Values.global.cp.resources.serviceaccount.namespace }}-bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-traces-rewrite@kubernetescrd
+    {{- end }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "nginx" }}
     nginx.ingress.kubernetes.io/rewrite-target: /v1/traces
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    {{- end }}
 spec:
   {{- if and .Values.global.cp.dataplane.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.global.cp.resources.ingress.ingressClassName }}
@@ -127,6 +165,19 @@ spec:
   {{- $_ := set .Values.global.cp.dataplane.ingress.annotations "kubernetes.io/ingress.class" .Values.global.cp.dataplane.ingress.className}}
   {{- end }}
 {{- end }}
+{{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-metrics-rewrite
+  namespace: {{ .Values.global.cp.resources.serviceaccount.namespace | default .Release.Namespace }}
+spec:
+  # Static rewrite to /v1/metrics (equivalent to nginx rewrite-target: /v1/metrics)
+  replacePathRegex:
+    replacement: /v1/metrics
+    regex: ^/tibco/agent/o11y/{{ $.Values.global.cp.dataplaneId }}/metrics
+---
+{{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -143,9 +194,15 @@ metadata:
   annotations:
     meta.helm.sh/release-namespace: {{ .Values.global.cp.resources.serviceaccount.namespace }}
     meta.helm.sh/release-name: {{ $fullName }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Values.global.cp.resources.serviceaccount.namespace }}-bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-metrics-rewrite@kubernetescrd
+    {{- end }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "nginx" }}
     nginx.ingress.kubernetes.io/rewrite-target: /v1/metrics
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    {{- end }}
 spec:
   {{- if and .Values.global.cp.dataplane.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.global.cp.resources.ingress.ingressClassName }}
@@ -185,6 +242,19 @@ spec:
   {{- $_ := set .Values.global.cp.dataplane.ingress.annotations "kubernetes.io/ingress.class" .Values.global.cp.dataplane.ingress.className}}
   {{- end }}
 {{- end }}
+{{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-metrics-export-rewrite
+  namespace: {{ .Values.global.cp.resources.serviceaccount.namespace | default .Release.Namespace }}
+spec:
+  # Static rewrite to /v1/metrics (equivalent to nginx rewrite-target: /v1/metrics)
+  replacePathRegex:
+    replacement: /v1/metrics
+    regex: ^/tibco/agent/o11y/{{ $.Values.global.cp.dataplaneId }}/metrics
+---
+{{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -201,9 +271,15 @@ metadata:
   annotations:
     meta.helm.sh/release-namespace: {{ .Values.global.cp.resources.serviceaccount.namespace }}
     meta.helm.sh/release-name: {{ $fullName }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "traefik" }}
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Values.global.cp.resources.serviceaccount.namespace }}-bm-{{ .Values.global.cp.resources.ingress.ingressClassName }}-metrics-export-rewrite@kubernetescrd
+    {{- end }}
+    {{- if eq .Values.global.cp.resources.ingress.ingressController "nginx" }}
     nginx.ingress.kubernetes.io/rewrite-target: /metrics
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    {{- end }}
 spec:
   {{- if and .Values.global.cp.dataplane.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.global.cp.resources.ingress.ingressClassName }}
