--- a/charts/msg-ems-tp/templates/ems.prom.svc.yaml
+++ b/charts/msg-ems-tp/templates/ems.prom.svc.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.keepPromServices }}
 #
 # Copyright (c) 2023-2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
@@ -12,35 +13,6 @@
 {{- $svcPromServer := printf "%s-%s" $emsParams.ems.name "prom-server" -}}
 {{- $svcPromFull := printf "%s-%s" $emsParams.ems.name "prom-full" -}}
 #
-kind: Service
-apiVersion: v1
-metadata:
-  name: "{{ $svcPromServer }}"
-  labels:
-    {{ include "ems.std.labels" $emsParams | indent 4 }}
-    tib-dp-app: msg-ems-ftl
-    tib-msg-stsname: "{{ $stsname }}"
-    tib-msg-svcname: "{{ $svcPromServer }}"
-    {{ include "msg.dp.labels" . | indent 4 }}
-    prometheus.io/scrape: "true"
-    platform.tibco.com/scrape_finops: "true"
-    prometheus.io/port: "{{ $emsParams.ems.ports.httpPort }}"
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "{{ $emsParams.ems.ports.httpPort }}"
-    prometheus.io/scheme: "http"
-    prometheus.io/path: /metrics/server
-    prometheus.io/insecure_skip_verify: "true"
-spec:
-  ports:
-  - name: ems-http-port
-    port: {{ int $emsParams.ems.ports.httpPort }}
-    protocol: TCP
-  selector:
-    tib-msg-stsname: "{{ $stsname }}"
-    tib-msg-stsrole: "leader"
-...
----
 kind: Service
 apiVersion: v1
 metadata:
@@ -67,3 +39,5 @@ spec:
   selector:
     tib-msg-stsname: "{{ $stsname }}"
     tib-msg-stsrole: "leader"
+
+{{ end }}
