--- a/charts/tibco-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
+++ b/charts/tibco-cp-hawk/charts/tp-cp-hawk-infra-querynode/values.yaml
@@ -10,7 +10,9 @@ global:
     enableResourceConstraints: true
     data:
       CP_DB_CONFIGURATION: provider-cp-database-config
-  tibco: {}
+  tibco:
+    image_name:
+      cpScripts: "core-cp-scripts"
   external:
     db_ssl_mode: ""
   # Pod Security Context configuration
@@ -93,7 +95,7 @@ images:
       name: hawk-querynode
       pullPolicy: IfNotPresent
       # tag: 134
-      tag: "1.12.0.9"
+      tag: "1.13.0.15"
 
 # no of replicas
 replicaCount: "1"
