--- a/charts/tibco-cp-messaging/recipes/spec.ems.yaml
+++ b/charts/tibco-cp-messaging/recipes/spec.ems.yaml
@@ -9,9 +9,9 @@ files:
   platform/ems/versions.json: |
     [
         {
-            "capabilityVersion": "1.12.0",
-            "minRollbackVersion": "1.12.0",
-            "minCPVersion": "1.11.0",
+            "capabilityVersion": "1.13.0",
+            "minRollbackVersion": "1.13.0",
+            "minCPVersion": "1.12.0",
             "maxCPVersion": "",
             "minVersionRequiredForUpgrade": "1.10.0",
             "minDPVersion": {
@@ -19,7 +19,20 @@ files:
                 "dp-configure-namespace": "1.10.0"
             },
             "releaseNotes": "#cshid=migration_and_compatibility",
-            "releaseDate": "2025/10/30"
+            "releaseDate": "2025/11/30"
+        },
+        {
+          "capabilityVersion": "1.12.0",
+          "minRollbackVersion": "1.12.0",
+          "minCPVersion": "1.10.0",
+          "maxCPVersion": "",
+          "releaseDate": "2025/10/30",
+          "releaseNotes": "Enhancements, Bug fixes, etc.",
+          "minVersionRequiredForUpgrade": "1.10.0",
+          "minDPVersion": {
+            "dp-core-infrastructure": "1.10.0",
+            "dp-configure-namespace": "1.10.0"
+          }
         },
         {
           "capabilityVersion": "1.11.0",
@@ -37,12 +50,12 @@ files:
         {
             "capabilityVersion": "1.10.0",
             "minRollbackVersion": "1.10.0",
-            "minCPVersion": "1.9.0",
+            "minCPVersion": "1.10.0",
             "maxCPVersion": "",
             "minVersionRequiredForUpgrade": "1.7.0",
             "minDPVersion": {
-                "dp-core-infrastructure": "1.9.0",
-                "dp-configure-namespace": "1.9.0"
+                "dp-core-infrastructure": "1.10.0",
+                "dp-configure-namespace": "1.10.0"
             },
             "releaseNotes": "#cshid=migration_and_compatibility",
             "releaseDate": "2025/8/30"
@@ -72,6 +85,68 @@ files:
             "releaseDate": "2025/5/30"
         }
     ]
+  platform/ems/1.13.0/recipe.yaml: |
+    recipe:
+        helmCharts:
+        -   flags:
+                createNamespace: false
+                install: true
+            name: msg-ems-tp
+            namespace: ${NAMESPACE}
+            releaseName: ${EMS_NAME}
+            repository:
+                chartMuseum:
+                    host: "${HELM_REPO}"
+            values:
+            -   content: |
+                  emsVersion: "10.4.0-95"
+                  ems:
+                    name: ${EMS_NAME}
+                    use: ${EMS_USE}
+                    sizing: ${EMS_SIZE}
+            version: "1.13.15"
+  platform/ems/1.13.0/package.json: |
+    {
+        "package": {
+            "allowMultipleInstances": true,
+            "capabilityResourceDependencies": [
+                {
+                    "required": true,
+                    "description": "Select a resource for the storage-class of EMS message data",
+                    "resourceId": "STORAGE",
+                    "resourceType": "PLATFORM",
+                    "type": "Message Storage"
+                },
+                {
+                    "description": "Select a resource for the storage-class of EMS logs store",
+                    "required": false,
+                    "resourceId": "STORAGE",
+                    "resourceType": "PLATFORM",
+                    "type": "Log Storage"
+                }
+            ],
+    	    "dependsOn": [
+    	      {
+    		"version": [
+    		  1,
+    		  9,
+    		  0
+    		],
+    		"capabilityId": "MSGCORE",
+    		"capabilityType": "INFRA"
+    	      }
+    	    ],
+            "provisioningRoles": [
+                "DEV_OPS"
+            ],
+            "services": [
+                {
+                    "description": "EMS Service",
+                    "name": "ems"
+                }
+            ]
+        }
+    }
   platform/ems/1.12.0/recipe.yaml: |
     recipe:
         helmCharts:
