--- a/charts/tibco-cp-messaging/recipes/spec.msgcore.yaml
+++ b/charts/tibco-cp-messaging/recipes/spec.msgcore.yaml
@@ -8,13 +8,26 @@ files:
   infra/msgcore/versions.json: |
     [
       {
-        "capabilityVersion": "1.12.0",
-        "minRollbackVersion": "1.12.0",
-        "minCPVersion": "1.11.0",
+        "capabilityVersion": "1.13.0",
+        "minRollbackVersion": "1.13.0",
+        "minCPVersion": "1.12.0",
         "maxCPVersion": "",
-        "releaseDate": "2025/08/26",
+        "releaseDate": "2025/11/30",
         "releaseNotes": "Enhancements, Bug fixes, etc.",
         "minVersionRequiredForUpgrade": "1.11.0",
+        "minDPVersion": {
+          "dp-core-infrastructure": "1.11.0",
+          "dp-configure-namespace": "1.11.0"
+        }
+      },
+      {
+        "capabilityVersion": "1.12.0",
+        "minRollbackVersion": "1.12.0",
+        "minCPVersion": "1.10.0",
+        "maxCPVersion": "",
+        "releaseDate": "2025/10/30",
+        "releaseNotes": "Enhancements, Bug fixes, etc.",
+        "minVersionRequiredForUpgrade": "1.10.0",
         "minDPVersion": {
           "dp-core-infrastructure": "1.10.0",
           "dp-configure-namespace": "1.10.0"
@@ -59,6 +72,40 @@ files:
         }
       }
     ]
+  infra/msgcore/1.13.0/recipe.yaml: |
+    recipe:
+      helmCharts:
+        - name: msg-gateway-tp
+          namespace: ${NAMESPACE}
+          version: "1.13.15"
+          repository:
+            chartMuseum:
+              host: ${HELM_REPO}
+          values:
+            - content: |
+                gwVersion: "10.4.0-11"
+          flags:
+            install: true
+            createNamespace: false
+            dependencyUpdate: true
+  infra/msgcore/1.13.0/package.json: |
+    {
+      "package": {
+        "services": [
+          {
+            "name": "tp-msg-gateway",
+            "description": "Messaging K8DP Gateway Services",
+            "monitoringPriority": "essential"
+          }
+        ],
+        "dependsOn": [],
+        "provisioningRoles": [
+          "DEV_OPS"
+        ],
+        "allowMultipleInstances": false,
+        "capabilityResourceDependencies": []
+      }
+    }
   infra/msgcore/1.12.0/recipe.yaml: |
     recipe:
       helmCharts:
