--- a/charts/tibco-cp-messaging/values.yaml
+++ b/charts/tibco-cp-messaging/values.yaml
@@ -20,9 +20,18 @@ global:
       # SYSTEM_SCALE: minimal
       # SYSTERM_SECURITY: defaulted
 
-# LEGACY CONTROL-PLANE SETTING
-data:
-  SYSTEM_DOCKER_REGISTRY:
+# Recipe customization overrides
+# recipeOverride:
+#   MSGCORE:
+#     msggw:
+#       resources:
+#         limits:
+#           cpu: "0.3"
+#   EMS:
+#     ems:
+#       resources:
+#         limits:
+#           memory: "1Gi"
 
 # MSGDP OVERRIDE SETTINGS
 cp:
@@ -47,7 +56,12 @@ resources:
     cpu: "2"
     memory: 4096Mi
 webserver:
+  loglevel:
   securityProfile:
+
+# LEGACY CONTROL-PLANE SETTING
+data:
+  SYSTEM_DOCKER_REGISTRY:
 
 # ##### EXAMPLE VALUES SECTIONS
 # RECOMMENDED Multi-chart SETTINGS
@@ -72,6 +86,6 @@ webserver:
 #   repo: msg-platform-cicd
 #   CP_VOLUME_CLAIM: provider-cp-fs-store
 #   imageName: msg-cp-ui-contrib
-#   imageTag: "1.12.0-13"
+#   imageTag: "1.13.0-14"
 #   TARGET_PATH: /private/tsc/config/capabilities/platform
 #   imageFullName:
