Publishing tibco-cp-devhub to public repo

--- a/charts/tibco-cp-devhub/Chart.yaml
+++ b/charts/tibco-cp-devhub/Chart.yaml
@@ -4,7 +4,7 @@
 #
 apiVersion: v2
 name: tibco-cp-devhub
-version: 1.13.0
+version: 1.13.0-alpha.8
 appVersion: 1.13.0
 description: TIBCO Platform base for Developer Hub Capability
 dependencies:
