--- a/charts/tibco-cp-bw/Chart.yaml
+++ b/charts/tibco-cp-bw/Chart.yaml
@@ -4,7 +4,7 @@
 #
 apiVersion: v2
 name: tibco-cp-bw
-version: 1.13.0-alpha.26
+version: 1.13.0
 appVersion: 1.13.0
 description: TIBCO Controlplane chart for BW Capability
 dependencies:
