--- a/charts/tibco-cp-flogo/Chart.yaml
+++ b/charts/tibco-cp-flogo/Chart.yaml
@@ -4,7 +4,7 @@
 #
 apiVersion: v2
 name: tibco-cp-flogo
-version: 1.13.0-alpha.17
+version: 1.13.0
 appVersion: 1.13.0
 description: TIBCO Controlplane chart for FLOGO Capability
 dependencies:
