--- a/charts/tibco-cp-base/Chart.yaml
+++ b/charts/tibco-cp-base/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: tibco-cp-base
 description: TIBCO Platform base chart
 type: application
-version: 1.13.0-alpha.95
+version: 1.13.0
 appVersion: "1.13.0"
 keywords:
   - tibco-platform
