--- a/charts/tibco-cp-devhub/Chart.yaml
+++ b/charts/tibco-cp-devhub/Chart.yaml
@@ -4,13 +4,13 @@
 #
 apiVersion: v2
 name: tibco-cp-devhub
-version: 1.13.0
-appVersion: 1.13.0
+version: 1.14.0-alpha.6
+appVersion: 1.14.0
 description: TIBCO Platform base for Developer Hub Capability
 dependencies:
   - name: tibcohub-recipes
-    version: "1.13.*"
+    version: "1.14.*"
     condition: tibcohub-recipes.enabled
   - name: tibcohub-contrib
-    version: "1.13.*"
+    version: "1.14.*"
     condition: tibcohub-contrib.enabled
